--- a/era5_download_pipeline/cfg/era5_pipeline_testing.yaml
+++ b/era5_download_pipeline/cfg/era5_pipeline_testing.yaml
@@ -9,6 +9,9 @@ variables:
   2m_temperature:
     short: t2m
     daily_stat: daymean
+  total_precipitation:
+    short: tp
+    daily_stat: daysum
   # potential_evaporation:
   #   short: pev
   #   daily_stat: daysum
@@ -24,7 +27,7 @@ variables:
   # mean_sea_level_pressure:
   #   short: msl
   #   daily_stat: daymean
-years: [1991, 1992]            # inclusive range
+years: [1991, 1993]            # inclusive range
 max_workers: 2
 tmp_dir: /tmp/era5_downloads
 grid_file: /Users/au728490/OneDrive - Aarhus universitet/PhD_AU/Python_Scripts/Data/mygrid_danra_small
@@ -35,3 +38,4 @@ lumi:
   raw_dir:   /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/raw/{var}/
   daily_dir: /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/daily/{var}/        # after daymean
   npz_dir:   /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/npz/{var}/           # final split
+  key:  /Users/au728490/.ssh/id_ed25519
