--- a/era5_download_pipeline/cfg/era5_pressure_pipeline.yaml
+++ b/era5_download_pipeline/cfg/era5_pressure_pipeline.yaml
@@ -1,30 +1,12 @@
 # cfg/era5_pipeline.yaml
 area: [60, -80, 40, 40]        # N,W,S,E  (edit!)
-dataset: reanalysis-era5-single-levels
+dataset: reanalysis-era5-pressure-levels
 format: netcdf
 variables:
-  2m_temperature:
-    short: t2m
+  geopotential:
+    short: z_pl
     daily_stat: daymean
-  total_precipitation:
-    short: tp
-    daily_stat: daysum
-  potential_evaporation:
-    short: pev
-    daily_stat: daymean
-  convective_available_potential_energy:
-    short: cape
-    daily_stat: daymax
-  vertical_integral_of_northward_water_vapour_flux:
-    short: wvf_north
-    daily_stat: daymean
-  vertical_integral_of_eastward_water_vapour_flux:
-    short: wvf_east
-    daily_stat: daymean
-  mean_sea_level_pressure:
-    short: msl
-    daily_stat: daymean
-pressure_levels: []        # Set to None for single-level data
+pressure_levels: [1000, 850, 500, 250]  # Pressure levels in hPa
 years: [1991, 2020]            # inclusive range
 max_workers: 3
 tmp_dir: /tmp/era5_downloads
@@ -35,6 +17,6 @@ weights_file: /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/weights/ERA
 lumi:
   user:  quistgaa
   host:  lumi.csc.fi
-  raw_dir:   /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/raw/{var}/
+  raw_dir:   /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/raw/{var}/{plev}
   daily_dir: /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/daily/{var}/        # after daymean
   npz_dir:   /scratch/project_465001695/quistgaa/Data/Data_ERA5_tmp/npz/{var}/           # final split
