Updates to entire structure: - Set up new structure for analysis: stats_analysis, comparison, correlations - Move old analysis files to stats_analysis/old - Add new files for comparison and correlations - Update CLI to handle new modes - Update main_data_app to include new modes

--- a/data_analysis_pipeline/configs/stats_config.yaml
+++ b/data_analysis_pipeline/configs/stats_config.yaml
@@ -4,30 +4,33 @@ plotting:
   fig_save_dir: ${env:DATA_FIGS_DIR}
   show: false
   save: true
+  visualize_data: true
   visualize_aggregated: true
   plot_stats: [mean, std, min, max] # Which statistics to plot
 
 statistics:
   save_global_pixel_stats: true
-  stats_path: ${env:STATS_SAVE_DIR}
+  stats_save_dir: ${env:STATS_SAVE_DIR}
   aggregate: true
+  print_results: ["global"]
 
 data:
   aggregation_time: weekly
   data_dir: ${env:DATA_DIR}
-  n_workers: 4
+  n_workers: ${env:SLURM_CPUS_PER_TASK}
   split: all
+  verbose: false # Whether to enable verbose logging during data loading (only for debugging, slows down processing)
 
 highres:
   model: DANRA 
   variables: ['temp', 'prcp']
   agg_methods: ['mean', 'sum']
   domain_size: [589, 789]
-  crop_region: [0, 0, 100, 100]
+  crop_region: [170, 350, 340, 520]
 
 lowres:
   model: ERA5
   condition_variables: ['temp', 'prcp', 'ewvf', 'nwvf', 'cape'] # ['prcp', 'temp', 'ewvf', 'nwvf', 'cape', ....] (ERA5 variables)
   agg_methods: ['mean', 'sum', 'mean', 'mean', 'mean']
   domain_size: [589, 789]
-  crop_region: [0, 0, 100, 100]  
+  crop_region: [170, 350, 340, 520]
