--- a/sbgm/config/full_run_config_debug.yaml
+++ b/sbgm/config/full_run_config_debug.yaml
@@ -1,8 +1,8 @@
 # sbgm/config/default_config.yaml
 
 experiment:
-  name: sbgm_debug
-  config_name: sbgm_debug
+  name: sbgm_debug_oldConv_eps
+  config_name: sbgm_debug_oldConv_eps
   # Date of the experiment, taken from the environment variable or set to current date
   date: 14_08_2025 #${env:EXP_DATE} # Date for the experiment, 
 
@@ -122,14 +122,14 @@ visualization:
 
 
 model:
-  use_resize_conv: true # true -> bilinear + 3x3, false -> transposed conv
+  use_resize_conv: false # true -> bilinear + 3x3, false -> transposed conv
   decoder_norm: "group" # Type of normalization in the decoder "instance" | "group"
   decoder_gn_groups: 8 # Number of groups for group normalization (if used)
-  decoder_activation: "SiLU" # Activation function in the decoder "ReLU" | "SiLU" | "GELU"
+  decoder_activation: "ReLU" # Activation function in the decoder "ReLU" | "SiLU" | "GELU"
 
 
 training:
-  seed: 42 # Random seed for reproducibility
+  seed: 31 # Random seed for reproducibility
   device: cuda # Device to use for training (e.g., 'cuda' or 'cpu')
   use_mixed_precision: false # Whether to use mixed precision training
   verbose: true # Whether to print verbose output during training
@@ -172,33 +172,31 @@ training:
 classifier_free_guidance:
   enabled: true # Whether to use classifier-free guidance
   drop_prob: 0.2 # Dropout probability for guidance
-  guidance_scale: 1.0 # Scale for guidance 
+  guidance_scale: 2.0 # Scale for guidance 
   guidance_scale_max: 3.0 # Maximum scale for guidance
 
 edm:
   enabled: false # Whether to use EDM (Elucidated Diffusion Models)
+  P_mean: -1.2 # Mean P for EDM
+  P_std: 1.2 # Standard deviation of P for EDM
+  sigma_data: 1.0 # Data is assumed N(0,1) after normalization
   sigma_min: 0.002 # Minimum sigma for EDM
   sigma_max: 80 # Maximum sigma for EDM
   rho: 7.0 # Rho parameter for EDM
+  S_churn: 40.0 # Churn parameter for EDM
+  S_min: 0.0 # Minimum S for EDM
+  S_max: 1e9 # Maximum S for EDM
+  S_noise: 1.0 # Noise parameter for EDM
 
 monitoring:
-  extreme_prcp:
-    enabled: true # Whether to monitor extreme precipitation
-    every_steps: 50 # Frequency of monitoring extreme precipitation
-    back_transform: true # Whether to back transform extreme precipitation values
-    log_first_n: 5 # Log the first n extreme precipitation values
-    check_in_validation: true # Whether to check extreme precipitation in validation set
-    threshold_mm: 500.0 # Threshold for extreme precipitation
-    clamp_in_generation: true # Whether to clamp values during generation
-    clamp_max_mm: 400.0 # Maximum value to clamp to during generation
-
+  edm_metrics: {enabled: true, every_steps: 50} # Whether to compute EDM metrics during training
 
 evaluation:
   n_gen_samples: 1 # Number of samples to generate
   n_steps: 1500 # Number of generation steps
   batch_size: 4 # Batch size for generation
   device: cpu # Device to use for generation (e.g., 'cuda' or 'cpu')
-  seed: 42 # Random seed for generation
+  seed: 31 # Random seed for generation
   gen_type: ['multiple', 'single', 'repeated'] # Type of generation to perform, 
   save_samples: true # Whether to save generated samples
   save_path_generation: ${env:SAMPLE_DIR}/generated_samples.npz # Path to save generated samples
